<resources>
    <string name="app_name">BookBook</string>
    <string name="save">Save</string>
    <string name="insert_data">Insert Data</string>
    <string name="delete_all">Delete All</string>
    <string name="delete">Delete</string>
    <string name="order">Order</string>

    <!--xml-->
    <string name="book">Book</string>
    <string name="book_name">Book Name</string>
    <string name="product">Product</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="Rs">Rs:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="edit_book">Edit Book</string>
    <string name="no_book">Book Book No Book</string>

    <!--script-->
    <string name="add_book_name">Add Book Name</string>
    <string name="enter_price">Enter Price</string>
    <string name="suppllier_name">Supplier Name</string>
    <string name="enter_supplier_name">Enter Supplier Name</string>
    <string name="enter_phone_no">Enter Phone No</string>
    <string name="book_inventory">Book Inventory</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">save</string>
    <string name="insert_book">Insert Dummy Book</string>
    <string name="delete_all_books">Delete All Books</string>
    <string name="sale">Sale</string>
    <string name="available_quantity">Available Quantity -\u0020</string>
    <string name="price_tag">Price -\u0020₹\u0020</string>
    <string name="empty_view_title_text">It\'s is bit lonely here</string>
    <string name="empty_view_subtitle_text">Get started by clicking the bottom book button</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_book">Add Book</string>
    <string name="label_book_detail">Book Details</string>
    <string name="cant_save_empty_book">Can\'t save empty book</string>
    <string name="editor_insert_product_failed">Error with saving book.</string>
    <string name="editor_insert_product_successful">Book Saved</string>
    <string name="editor_update_product_failed">Error updating book.</string>
    <string name="editor_update_product_successful">Book Updated succesfully</string>
    <string name="delete_dialog_msg">Delete this book ?</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_product_failed">Delete book failed</string>
    <string name="editor_delete_procduct_successful">Book deleted succesfully.</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="fields_cant_be_empty">Fields can\'t be empty</string>
    <string name="sold_book">Book sold successfully</string>
    <string name="book_cannot_be_sold_unknown_error">Book cannot be sold due to unknown error</string>
    <string name="not_in_stock">Book not in stock</string>
    <string name="eighty">₹ 80.0</string>
    <string name="book_details">BOOK DETAILS</string>
    <string name="supplier_details">SUPPLIER DETAILS</string>
    <string name="quantity_tag">QUANTITY</string>
    <string name="book_cant_be_neative">Books can\'t be negative</string>
    <string name="invalid_quantity">Invalid Quantity</string>
</resources>
